rust/src/methods/decode/snapshots/articles@simple.md.snap
---
source: rust/src/methods/decode/md.rs
expression: "decode(&content).expect(\"Unable to decode Markdown\")"
input_file: fixtures/articles/simple.md

---
{
  "type": "Article",
  "content": [
    {
      "type": "Heading",
      "content": [
        "Introduction"
      ],
      "depth": 1
    },
    {
      "type": "Paragraph",
      "content": [
        "A simple Markdown article for testing. When making changes please note that test snapshots based on this fixture may need to be updated."
      ]
    },
    {
      "type": "Heading",
      "content": [
        "Methods"
      ],
      "depth": 1
    },
    {
      "type": "Paragraph",
      "content": [
        "This is the methods section."
      ]
    },
    {
      "type": "Heading",
      "content": [
        "Results"
      ],
      "depth": 1
    },
    {
      "type": "Paragraph",
      "content": [
        "The results include a table (Table 1)."
      ]
    },
    {
      "type": "Table",
      "rows": [
        {
          "type": "TableRow",
          "cells": [
            {
              "type": "TableCell",
              "content": [
                "Group"
              ]
            },
            {
              "type": "TableCell",
              "content": [
                "Value"
              ]
            }
          ],
          "rowType": "Header"
        },
        {
          "type": "TableRow",
          "cells": [
            {
              "type": "TableCell",
              "content": [
                "A"
              ]
            },
            {
              "type": "TableCell",
              "content": [
                "1.1"
              ]
            }
          ]
        },
        {
          "type": "TableRow",
          "cells": [
            {
              "type": "TableCell",
              "content": [
                "B"
              ]
            },
            {
              "type": "TableCell",
              "content": [
                "2.2"
              ]
            }
          ]
        }
      ]
    },
    {
      "type": "Heading",
      "content": [
        "Discussion"
      ],
      "depth": 1
    },
    {
      "type": "Paragraph",
      "content": [
        "This is the conclusion section."
      ]
    }
  ]
}
