rust/src/methods/decode/snapshots/fragments@heading.html.snap
---
source: rust/src/methods/decode/html.rs
expression: "decode_fragment(&content, Options::default())"
input_file: fixtures/fragments/html/heading.html

---
[
  {
    "type": "Heading",
    "content": [
      "Heading 1"
    ],
    "depth": 1
  },
  {
    "type": "Heading",
    "content": [
      "Heading 2"
    ],
    "depth": 2
  },
  {
    "type": "Heading",
    "content": [
      "Heading 3"
    ],
    "depth": 3
  },
  {
    "type": "Heading",
    "content": [
      "Heading 4"
    ],
    "depth": 4
  },
  {
    "type": "Heading",
    "content": [
      "Heading 5"
    ],
    "depth": 5
  },
  {
    "type": "Heading",
    "content": [
      "Heading 6"
    ],
    "depth": 6
  },
  {
    "type": "Heading",
    "content": [
      "Heading with an id"
    ],
    "depth": 1,
    "id": "heading-with-an-id"
  }
]
