rust/src/methods/decode/snapshots/fragments@image.html.snap
---
source: rust/src/methods/decode/html.rs
expression: decode_fragment(&content)
input_file: fixtures/fragments/html/image.html

---
[
  {
    "type": "Paragraph",
    "content": [
      "An image ",
      {
        "type": "ImageObject",
        "contentUrl": "image.png"
      },
      "."
    ]
  },
  {
    "type": "Paragraph",
    "content": [
      "An image with a title ",
      {
        "type": "ImageObject",
        "contentUrl": "image.png",
        "caption": "the title"
      },
      "."
    ]
  }
]
